--- a/eng/pipelines/optprof.yml
+++ b/eng/pipelines/optprof.yml
@@ -184,6 +184,7 @@ stages:
         toLowerCase: false
         usePat: true
         dropMetadataContainerName: "DropMetadata-Product"
+    post
     # Remove this step hook and it's task if you don't want LKG support
     prePublishOptimizationInputsDropStepList:
     # Set parameter for PreviousOptimizationInputsDropName
