--- a/src/NuGet.Core/NuGet.Build.Tasks/NuGet.targets
+++ b/src/NuGet.Core/NuGet.Build.Tasks/NuGet.targets
@@ -207,7 +207,8 @@ Copyright (c) .NET Foundation. All rights reserved.
     <WriteRestoreGraphTask
       RestoreGraphItems="@(_RestoreGraphEntryFiltered)"
       RestoreGraphOutputPath="$(RestoreGraphOutputPath)"
-      RestoreRecursive="$(RestoreRecursive)" />
+      RestoreRecursive="$(RestoreRecursive)"
+      SDKAnalysisLevel="$(SDKAnalysisLevel)"/>
   </Target>
 
   <!--
